<resources>
    <string name="app_name">PopUpTrip</string>
    <string name="title_home">Home</string>
    <string name="title_exploration">Exploration</string>
    <string name="title_nearby_places">Destinations Nearby</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_setting">Settings</string>
    <string name="title_switch">Dark Mode</string>
    <string name="title_language">Language</string>
    <string name="title_mode">Theme</string>
    <string name="title_profile">Personal Profile</string>
    <string name="title_logout">Log Out</string>
    <string name="description_profile">Go to Profile Page</string>
    <string name="change_name">Username: </string>
    <string name="title_password">Security Option: </string>
    <string name="change_password">Security</string>
    <string name="title_photo">Photo: </string>
    <string name="description_photo">Click here to Change photo</string>
    <string name="title_save">Save</string>
    <string name="title_quit">Quit</string>
    <string name="title_food">Food:</string>
    <string name="title_pref">Preference</string>
    <string name="title_place">Your Preferred Places:</string>
    <string name="title_star">Star Places: </string>
    <string name="star_button">Star</string>
    <string name="title_method">Travel Method: </string>
    <string name="title_notifications">Notifications</string>
    <string name="searchbar_hint">Enter destination</string>
    <string name="home_search_box_content">Search Bar Enter Destination</string>
    <string name="enter_starting_point">Enter Starting Point</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="use_current_location">Use current location</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="email_username">Email Address</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logged_out">You have been logged out</string>
    <string name="itinerary_success">Itinerary successfully created!</string>
    <string name="itinerary_error">Oops! Something went wrong with itinerary creation.</string>
    <string name="time_to_next_format">↓%1$s</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="password">Enter Password</string>
    <string name="login_txt">Login</string>
    <string name="createAccountTxt">Create An Account</string>
    <string name="resetPasswordTxt">Reset Password</string>
    <string name="signInTxt">Sign In</string>
    <string name="web_client_id">133762393554-t9c6ohoifh8lvkp0ietkk4e5gv1f7eg4.apps.googleusercontent.com</string>
    <string name="title_exploration_page">Exploration Page</string>
    <string name="Restaurant">Restaurant</string>
    <string name="Cafe">Cafe</string>
    <string name="Bakery">Bakery</string>
    <string name="title_NightLife">NightLife: </string>
    <string name="Bar">Bar</string>
    <string name="Night_club">Night Club</string>
    <string name="title_Nature">Nature:</string>
    <string name="Aquarium">Aquarium</string>
    <string name="Zoo">Zoo</string>
    <string name="Park">Park</string>
    <string name="Campground">Campground</string>
    <string name="title_Culture">Culture:</string>
    <string name="Library">Library</string>
    <string name="Museum">Museum</string>
    <string name="Art_Gallery">Art Gallery</string>
    <string name="BookStore">Bookstore</string>
    <string name="description_pref_back">Back_to_profilePage</string>
    <string name="go_preference">Preference: </string>
    <string name="title_Entertainment">ENT: </string>
    <string name="AmusementPark">Amusement Park</string>
    <string name="MovieTheater">Movie Theater</string>
    <string name="current_location_title">Your Location</string>
    <string name="adjust_map_bound_title">Adjust View Bounds</string>
    <string name="next_button">NEXT</string>
    <string name="back_button">BACK</string>
    <string name="signUp_txt">Sign Up</string>
    <string name="enter_your_username">Enter User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_Email">Enter Email</string>
    <string name="pleaseFillAllTheBlanks">Please fill all the blanks</string>
    <string name="pleaseDoubleCheckYourPassword">Please Double Check Your Password</string>
    <string name="detailed_place_dialog_select_button">Select as Destination</string>
    <string name="detailed_place_dialog_add_button">Add to Plan</string>
    <string name="detailed_place_dialog_remove_button">Remove from Plan</string>
    <string name="category_title_food">FOOD</string>
    <string name="category_title_nightlife">NIGHTLIFE</string>
    <string name="category_title_nature">NATURE</string>
    <string name="category_title_culture">CULTURE</string>
    <string name="category_title_entertainment">ENTERTAINMENT</string>
    <string name="yourPasswordIsTooShort">Your password is too short!</string>
    <string name="emailIsRequired">Email is required</string>
    <string name="invalidEmail">Invalid email!</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="pleaseCheckYourEmailToResetPassword">Please check your email to reset password</string>
    <string name="changeEmail">ChangeEmail:</string>
    <string name="emailButton">change email</string>
    <string name="changepassword">Change Password:</string>
    <string name="passwordButton">change password</string>
    <string name="sendEmail">send email</string>
    <string name="cancel">cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="resetYourPassword">Reset Your Password</string>
    <!-- -->
    <string name="restart_question">Do you wanna restart now to apply the mode? Or wait for reopen the app</string>
    <string name="title_restart">Restart or Not?</string>
    <string name="restart">restart</string>
    <string name="fill_blank_toast">Please fill in all the blanks</string>
    <string name="authen_succeed">Authentication succeed.</string>
    <string name="authen_fail">Authentication failed</string>
    <string name="login_success">You\'ve been logged in.</string>
    <string name="logout_success">You have been logged out</string>
    <string name="walk_list">WALKING</string>
    <string name="transit_list">TRANSIT</string>
    <string name="driving_list">DRIVING</string>
    <string name="bicycling_list">BICYCLING</string>
    <string name="choice">You have chosen</string>
    <string name="saved">Save Preference Successful!</string>
    <string name="cannot_get_current_location">Cannot get current location.</string>
    <string name="turn_on_location">Please turn on location</string>
    <string name="distance_more">Distance between start point and destination is more than 20km!</string>
    <string name="no_directions_found">No directions found!</string>
    <string name="add_places_to_itinerary">Please add some places of interest to Itinerary!</string>
    <string name="noItinerariesYet">No Itineraries created yet</string>
    <string name="title_itinerary_history">Itinerary History</string>
    <string name="title_itinerary_detail">Itinerary Detail</string>
    <string name="instructionsForTraveling">Instructions for traveling</string>
    <string name="PleaseGrantPermissionToUseThisApp">Please Grant Permission to Use this App</string>

</resources>