<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/pref_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/title_pref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_pref"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/save_preference_button"
            android:text="@string/title_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"></Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/method_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pref_constraint">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="gravity"
            android:textSize="25sp"
            android:text="@string/title_method"
            android:id="@+id/title_method"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"></TextView>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:dividerInsetStart="20dp"
            app:dividerInsetEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/title_method" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/method_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:minHeight="48dp"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/title_method"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/style_constraint"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/method_constraint">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="gravity"
            android:textSize="25sp"
            android:text="@string/title_place"
            android:id="@+id/title_place"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/Food_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/style_constraint">

        <TextView
            android:id="@+id/title_Food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/title_food"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/FoodGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/title_Food"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.chip.Chip
                android:id="@+id/Bakery_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bakery"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_margin="6dp"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/Cafe_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cafe"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="1000dp"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/Restaurant_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Restaurant"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                android:layout_margin="6dp"
                />
            <!-- Chips can be declared here, or added dynamically. -->

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/NightLife_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Food_constraint">
        <TextView
            android:id="@+id/title_NightLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/title_NightLife"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/NightLifeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/title_NightLife"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.chip.Chip
                android:id="@+id/Bar_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bar"
                android:layout_margin="8dp"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/Night_club_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Night_club"
                android:layout_margin="8dp"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"

                />
            <!-- Chips can be declared here, or added dynamically. -->

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/Nature_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NightLife_constraint">

        <TextView
            android:id="@+id/title_Nature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/title_Nature"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/NatureGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/title_Nature"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.chip.Chip
                android:id="@+id/Park_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Park"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_margin="10dp"

                />
            <com.google.android.material.chip.Chip
                android:id="@+id/Campground_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Campground"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                android:layout_margin="10dp"
                />
            <!-- Chips can be declared here, or added dynamically. -->

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/Culture_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Nature_constraint">
        <TextView
            android:id="@+id/title_Culture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/title_Culture"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/CultureGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/title_Culture"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.chip.Chip
                android:id="@+id/Library_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Library"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                android:layout_margin="8dp"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/Museum_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Museum"
                android:layout_marginLeft="8dp"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                android:layout_marginRight="1000dp"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/Art_Gallery_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                android:text="@string/Art_Gallery"
                android:layout_margin="8dp"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/BookStore_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                android:text="@string/BookStore"
                android:layout_margin="8dp"
                />
            <!-- Chips can be declared here, or added dynamically. -->

        </com.google.android.material.chip.ChipGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/Entertainment_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Culture_constraint">
        <TextView
            android:id="@+id/title_Entertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/title_Entertainment"
            android:textAlignment="gravity"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/EntertainmentGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/title_Entertainment"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.chip.Chip
                android:id="@+id/Aquarium_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Aquarium"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                android:layout_margin="10dp"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/MovieTheater_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MovieTheater"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="1000dp"></com.google.android.material.chip.Chip>
            <com.google.android.material.chip.Chip
                android:id="@+id/Zoo_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zoo"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"></com.google.android.material.chip.Chip>
            <com.google.android.material.chip.Chip
                android:id="@+id/AmusementPark_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AmusementPark"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:checkedIcon="@drawable/favorite_24dp"
                app:checkedIconVisible="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="1000dp"
                />

            <!-- Chips can be declared here, or added dynamically. -->

        </com.google.android.material.chip.ChipGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

        />
</androidx.constraintlayout.widget.ConstraintLayout>
