<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bignerdranch.android.popuptrip.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/home_to_exploration_action"
            app:destination="@id/navigation_exploration" />
        <argument
            android:name="destinationPlaceName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null" />
    </fragment>

    <fragment
        android:id="@+id/navigation_exploration"
        android:name="com.bignerdranch.android.popuptrip.ui.home.ExplorationFragment"
        android:label="@string/title_exploration"
        tools:layout="@layout/fragment_exploration" >
        <argument
            android:name="destinationPlaceId"
            app:argType="string" />
        <action
            android:id="@+id/exploration_to_home_action"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_exploration_to_itineraryFragment"
            app:destination="@id/itineraryDetailedFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bignerdranch.android.popuptrip.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
<!--        <action-->
<!--            android:id="@+id/action_navigation_dashboard_to_navigation_exploration"-->
<!--            app:destination="@id/navigation_exploration" />-->
<!--        <action-->
<!--            android:id="@+id/action_navigation_dashboard_to_navigation_home"-->
<!--            app:destination="@id/navigation_home" />-->
        <action
            android:id="@+id/action_navigation_dashboard_to_itineraryFragment"
            app:destination="@id/itineraryDetailedFragment">
            <argument
                android:name="itineraryId" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.bignerdranch.android.popuptrip.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting">
<!--        <action-->
<!--            android:id="@+id/action_navigation_settings_to_navigation_exploration"-->
<!--            app:destination="@id/navigation_exploration" />-->
<!--        <action-->
<!--            android:id="@+id/action_navigation_settings_to_navigation_home"-->
<!--            app:destination="@id/navigation_home" />-->
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bignerdranch.android.popuptrip.ui.Profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
<!--        <action-->
<!--            android:id="@+id/action_navigation_profile_to_navigation_exploration"-->
<!--            app:destination="@id/navigation_exploration" />-->
<!--        <action-->
<!--            android:id="@+id/action_navigation_profile_to_navigation_home"-->
<!--            app:destination="@id/navigation_home" />-->
    </fragment>

    <fragment
        android:id="@+id/navigation_preference"
        android:name="com.bignerdranch.android.popuptrip.ui.Profile.PreferenceFragment"
        android:label="@string/title_pref"
        tools:layout="@layout/fragment_preference">
        <action
            android:id="@+id/preference_to_profile_action"
            app:destination="@id/navigation_profile" />
    </fragment>
    <fragment
        android:id="@+id/itineraryDetailedFragment"
        android:name="com.bignerdranch.android.popuptrip.ui.itinerary.ItineraryDetailedFragment"
        android:label="fragment_itinerary"
        tools:layout="@layout/fragment_itinerary" >
        <action
            android:id="@+id/action_itineraryFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <argument
            android:name="itineraryId"
            app:argType="string" />
    </fragment>

</navigation>